--- a/public/views/templates/updateQuestions.html
+++ b/public/views/templates/updateQuestions.html
@@ -63,6 +63,7 @@
       <md-input-container class="md-block">
         <label>Enter Question</label>
         <input ng-model="UQC.questionIn" type="text" ng-value="UQC.value">
+        {{UQC.questionIn}}
       </md-input-container>
       <md-input-container class="md-block">
         <md-checkbox name="tos" ng-model="UQC.flaggedIn">
