uglify working for all except adminIntern ctlr

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -18,20 +18,20 @@
   <script src="public/vendors/Chart.min.js"></script>
 
   <!-- js -->
-  <script src="/public/scripts/client.js"></script>
-  <script src="public/scripts/services/adminHomeService.js" charset="utf-8"></script>
-  <script src="public/scripts/services/adminInternService.js" charset="utf-8"></script>
-  <script src="/public/scripts/services/authFactory.js"></script>
-  <script src="public/scripts/services/feedBackFormService.js" charset="utf-8"></script>
-  <script src="public/scripts/services/importExportService.js" charset="utf-8"></script>
-  <script src="public/scripts/services/updateQuestionsService.js" charset="utf-8"></script>
-  <script src="public/scripts/controllers/adminHomeController.js" charset="utf-8"></script>
+  <script src="public/scripts/client.min.js"></script>
+  <script src="public/scripts/services/adminHomeService.min.js" charset="utf-8"></script>
+  <script src="public/scripts/services/adminInternService.min.js" charset="utf-8"></script>
+  <script src="public/scripts/services/authFactory.min.js"></script>
+  <script src="public/scripts/services/feedBackFormService.min.js" charset="utf-8"></script>
+  <script src="public/scripts/services/importExportService.min.js" charset="utf-8"></script>
+  <script src="public/scripts/services/updateQuestionsService.min.js" charset="utf-8"></script>
+  <script src="public/scripts/controllers/adminHomeController.min.js" charset="utf-8"></script>
   <script src="public/scripts/controllers/adminInternController.js" charset="utf-8"></script>
-  <script src="/public/scripts/controllers/authController.js"></script>
-  <script src="public/scripts/controllers/feedBackFormController.js" charset="utf-8"></script>
-  <script src="public/scripts/controllers/ImportExportController.js" charset="utf-8"></script>
-  <script src="/public/scripts/controllers/navController.js"></script>
-  <script src="public/scripts/controllers/updateQuestionsController.js" charset="utf-8"></script>
+  <script src="public/scripts/controllers/authController.min.js"></script>
+  <script src="public/scripts/controllers/feedBackFormController.min.js" charset="utf-8"></script>
+  <script src="public/scripts/controllers/importExportController.min.js" charset="utf-8"></script>
+  <script src="public/scripts/controllers/navController.min.js"></script>
+  <script src="public/scripts/controllers/updateQuestionsController.min.js" charset="utf-8"></script>
   <!-- swal css -->
   <link rel="stylesheet" href="public/vendors/sweetalert.css">
   <link rel="stylesheet" type="text/css" href="/public/vendors/normalize.css" />
