changed to Please Check-in with us.

--- a/public/views/templates/feedbackform.html
+++ b/public/views/templates/feedbackform.html
@@ -4,7 +4,7 @@
 
 	<!-- FBFC.checkEmail(FBFC.useremail) -->
 	<md-toolbar id="toolbar" layout="column">
-		<h1 id="toolBarText">Hi {{FBFC.username.name}}. Check-In with us!</h1>
+		<h1 id="toolBarText">Please Check-In with us!</h1>
 	</md-toolbar>
 	<!-- <md-button ng-click="FBFC.getQuestions()">Get Questions</md-button> -->
 	<md-content class="pageContent feedbackform">
