fix submit question button but need grunt

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -211,3 +211,11 @@ Login
 .sendSMS {
   text-align: center;
 }
+
+/***************************
+Feedback Form 2
+****************************/
+
+.comment {
+  width: 90%;
+}
