console log removed on client side

--- a/public/views/templates/feedbackform.html
+++ b/public/views/templates/feedbackform.html
@@ -34,9 +34,9 @@
 </div>
 
 <h3>Do you have any other comments?</h3>
-<md-input-container>
+<md-input-container class="comment">
 	<label>Write here:</label>
-	<input ng-model="comment">
+	<textarea ng-model="comment" rows="3" flex></textarea>
 </md-input-container>
 
 <br />
