updated to STEP UP

--- a/public/views/templates/login.html
+++ b/public/views/templates/login.html
@@ -5,7 +5,7 @@
 
 
 <md-toolbar id="toolbar" layout="column">
-  <h1 id="toolBarText" style="align:center">Please Log In to Step Up Check In:</h1>
+  <h1 id="toolBarText" style="align:center">Please Log In to STEP-UP Check-In:</h1>
 </md-toolbar>
 <!-- Shown for users that are NOT logged in -->
 <section ng-hide="auth.loggedIn" class="signGoogle">
