remove two data viz

--- a/public/views/templates/admin-intern.html
+++ b/public/views/templates/admin-intern.html
@@ -54,7 +54,7 @@
 </div>
 <div class="charts2" layout="row">
 
-    <md-card layout-padding layout-margin flex="33">
+    <!-- <md-card layout-padding layout-margin flex="33">
 
         <canvas id="myChart4" width="400" height="400"></canvas>
     </md-card>
@@ -62,7 +62,7 @@
     <md-card layout-padding layout-margin flex="33">
 
         <canvas id="myChart5" width="400" height="400"></canvas>
-    </md-card>
+    </md-card> -->
 
 </div></md-content>
 
